# SKY

./: .gitattributes  .gitignore  PROJECT_REVIEW.md  README.md  jetson.sh  pyproject.toml  requirements-jetson.txt  requirements.txt
Thermal/: Thermal_detector.py  thermal_detector_config.json  thermal_live_stream.py  thermal_preprocess.py
configs/: bench_guidance_quick.yaml  default.yaml  deploy_jetson_siyi_a8_mini_stage2_engine_1080p.yaml  deploy_jetson_siyi_a8_mini_stage2_engine_1080p_v2.yaml  deploy_jetson_yolo11s_stage2_multiclass_capped_engine.yaml  deploy_jetson_yolo11s_stage2_multiclass_capped_engine_1080p.yaml  deploy_jetson_yolo11s_v2_engine.yaml  deploy_jetson_yolo11s_v2_engine_1080p.yaml  deploy_jetson_yolov26_lrdd_v2_siyi_a8_mini_1080p.yaml  jetson_live_camera_pytorch.yaml  jetson_live_camera_pytorch_full.yaml  jetson_live_camera_stage2_multiclass_capped_pytorch.yaml  jetson_live_camera_tensorrt_smoke.yaml  jetson_live_camera_tensorrt_smoke_1080p.yaml  replay_yolo11s_stage2_multiclass_capped_engine.yaml  replay_yolo11s_v2_engine.yaml  trained_yolo11s_conf010_eval.yaml  trained_yolo11s_eval.yaml  trained_yolo11s_stage2_multiclass_capped_eval.yaml  trained_yolo11s_v2_eval.yaml  trained_yolo11s_v2_guidance_full.yaml  trained_yolo11s_v3_finetune_quick_eval.yaml  yolov26_eval.yaml  yolov26_lrdd_eval.yaml  yolov26_lrdd_maciullo_eval.yaml
docs/: DATASET_INTEGRATION_REPORT.md  DATASET_SOURCING_DECISION.md  E80_FINAL_RESULTS.md  ENGINEERING_PLAN.md  FLIGHT_CONTROL_PHASES.docx  FLIGHT_CONTROL_PHASES.md  GUIDANCE_AND_MOCK_BRIDGE_IMPLEMENTATION.md  PHASE_1_RESULTS.md  (+13 more)
(+158 files in other folders)
